--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -78,7 +78,7 @@ aside .graph .graph-title,
 aside .toc-title-container .toc-title,
 aside .backlinks .backlink-title {
   margin: 0 !important;
-  font-family: "ScalySansRemake" !important;
+  font-family: "" EB Garamond "" !important;
   padding: 0.5em 0.5em !important;
   font-size: 1rem !important;
   font-variant: small-caps !important;
@@ -155,12 +155,13 @@ body {
   --font-editor-override: "EB Garamond";
   --font-default: "EB Garamond";
 }
-#tooltip-content div:first-child {
+#tooltip-content > div:first-child {
   display: none;
 }
 .callout[data-callout] {
   --callout-color: 0, 0, 0;
   --callout-icon: unset;
+  background-color: unset;
 }
 main.content {
   max-width: 660px;
@@ -183,7 +184,8 @@ body iframe {
 }
 
 // DND 5E STYLES FROM HOMEBREWERY
-body {
+body,
+#tooltip-wrapper {
   background-image: url("https://homebrewery.naturalcrit.com/assets/parchmentBackground.jpg") !important;
 }
 :is(main, #tooltip-wrapper) {
@@ -192,7 +194,8 @@ body {
 :is(main, #tooltip-wrapper) p {
   line-height: 1.25em !important;
 }
-:is(main, #tooltip-wrapper) p + * {
+:is(main, #tooltip-wrapper) p + *,
+:is(main, #tooltip-wrapper) .table-wrapper + * {
   margin-top: 0.325cm !important;
 }
 :is(main, #tooltip-wrapper) p + p {
@@ -227,7 +230,7 @@ body {
   color: var(--HB_Color_HeaderText) !important;
 }
 :is(main, #tooltip-wrapper) h1 {
-  margin-bottom: 0.18cm !important;
+  margin-bottom: 0.28cm !important;
   column-span: all !important;
   font-size: 0.89cm !important;
   line-height: 1em !important;
@@ -240,7 +243,7 @@ body {
 :is(main, #tooltip-wrapper) h1 + p::first-letter {
   float: left !important;
   padding-bottom: 2px !important;
-  padding-left: 40px !important;
+  padding-left: 55px !important;
   margin-top: -0.3cm !important;
   margin-bottom: -20px !important;
   margin-left: -40px !important;
@@ -294,7 +297,7 @@ body {
   margin-top: 0.2cm !important;
 }
 :is(main, #tooltip-wrapper) table {
-  font-family: "ScalySansRemake" !important;
+  font-family: "" EB Garamond "" !important;
   font-size: 0.318cm !important;
   line-height: 1.2em !important;
   line-height: 16px !important;
@@ -336,33 +339,37 @@ body {
 :is(main, #tooltip-wrapper) table tbody tr:nth-child(odd) {
   background-color: var(--HB_Color_Accent) !important;
 }
-:is(main, #tooltip-wrapper) .quote > p {
+:is(main, #tooltip-wrapper) .callout[data-callout="quote"] > div {
   font-style: italic !important;
   line-height: 0.54cm !important;
 }
-:is(main, #tooltip-wrapper) .quote > p:first-child::first-line {
+:is(main, #tooltip-wrapper)
+  .callout[data-callout="quote"]
+  > p:first-child::first-line {
   font-size: 0.38cm !important;
   font-style: normal !important;
   font-variant: small-caps !important;
 }
-:is(main, #tooltip-wrapper) .quote p + .attribution {
+:is(main, #tooltip-wrapper) .callout[data-callout="quote"] div + .attribution {
   margin-top: 0 !important;
 }
-:is(main, #tooltip-wrapper) .quote .attribution {
+:is(main, #tooltip-wrapper) .callout[data-callout="quote"] .attribution {
   display: block !important;
   font-style: normal !important;
   line-height: 0.54cm !important;
   text-align: right !important;
 }
-:is(main, #tooltip-wrapper) .quote .attribution::before {
+:is(main, #tooltip-wrapper)
+  .callout[data-callout="quote"]
+  .attribution::before {
   margin-right: 0.2em !important;
   content: "---" !important;
 }
-:is(main, #tooltip-wrapper) .quote + * {
+:is(main, #tooltip-wrapper) .callout[data-callout="quote"] + * {
   margin-top: 0.54cm !important;
 }
 :is(main, #tooltip-wrapper) .callout[data-callout="tip"] {
-  font-family: "ScalySansRemake" !important;
+  font-family: "" EB Garamond "" !important;
   font-size: 0.318cm !important;
   line-height: 1.2em !important;
   padding: 0.13cm 0.16cm !important;
@@ -413,7 +420,7 @@ body {
   margin-bottom: 0 !important;
 }
 :is(main, #tooltip-wrapper) .callout[data-callout="note"] {
-  font-family: "ScalySansRemake" !important;
+  font-family: "" EB Garamond "" !important;
   font-size: 0.318cm !important;
   line-height: 1.2em !important;
   padding: 0.1em !important;
@@ -528,7 +535,7 @@ body {
   --wc: url("/assets/watercolor/watercolor12.png") !important;
 }
 :is(main, #tooltip-wrapper) .monster {
-  font-family: "ScalySansRemake" !important;
+  font-family: "" EB Garamond "" !important;
   font-size: 0.318cm !important;
   line-height: 1.2em !important;
   position: relative !important;
@@ -648,11 +655,11 @@ body {
   // position: absolute !important;
   // bottom: 0px !important;
   // left: 0px !important;
-  // z-index: 100 !important;
+  // z-index: -1 !important;
   // width: 100% !important;
   // height: 50px !important;
   // content: "" !important;
-  // background-image: url("/assets/PHB_footerAccent.png") !important;
+  // background-image: url("https://homebrewery.naturalcrit.com/assets/PHB_footerAccent.png") !important;
   // background-size: cover !important;
 }
 :is(main, #tooltip-wrapper):nth-child(even)::after {
@@ -718,7 +725,7 @@ body {
   margin-left: 1.5em !important;
 }
 :is(main, #tooltip-wrapper) .spellList {
-  font-family: "ScalySansRemake" !important;
+  font-family: "" EB Garamond "" !important;
   font-size: 0.318cm !important;
   line-height: 1.2em !important;
   column-count: 2 !important;
